Ajout score d'acceptation a pylint

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,4 +9,4 @@ lint:
     - python
   script:
     - pip install pylint
-    - pylint --rcfile=.pylintrc $(find . -name "*.py")
+    - pylint --rcfile=.pylintrc --fail-under=8.0 $(find . -name "*.py")
