--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,5 +10,5 @@ lint:
   script:
     - pip install --upgrade pip
     - pip install pylint
-    - pip install boto3
+    - pip install -r requirements.txt
     - pylint --rcfile=.pylintrc $(find . -name "*.py")
