--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,4 +14,4 @@ lint:
     - pip install pylint
     - pip install boto3
     - pip install pyvmomi
-    - pylint --rcfile=.pylintrc $(find . -name "*.py")
+    - pylint --rcfile=.pylintrc $(find . -path ./env -prune -o -name "*.py")
