--- a/.pylintrc
+++ b/.pylintrc
@@ -290,16 +290,16 @@ exclude-too-few-public-methods=
 ignored-parents=
 
 # Maximum number of arguments for function / method.
-max-args=5
+max-args=25
 
 # Maximum number of attributes for a class (see R0902).
-max-attributes=7
+max-attributes=50
 
 # Maximum number of boolean expressions in an if statement (see R0916).
 max-bool-expr=5
 
 # Maximum number of branch for function / method body.
-max-branches=12
+max-branches=50
 
 # Maximum number of locals for function / method body.
 max-locals=15
@@ -308,19 +308,19 @@ max-locals=15
 max-parents=7
 
 # Maximum number of positional arguments for function / method.
-max-positional-arguments=5
+max-positional-arguments=25
 
 # Maximum number of public methods for a class (see R0904).
-max-public-methods=20
+max-public-methods=50
 
 # Maximum number of return / yield for function / method body.
-max-returns=6
+max-returns=15
 
 # Maximum number of statements in function / method body.
-max-statements=50
+max-statements=150
 
 # Minimum number of public methods for a class (see R0903).
-min-public-methods=2
+min-public-methods=0
 
 
 [EXCEPTIONS]
@@ -441,7 +441,10 @@ disable=raw-checker-failed,
         line-too-long,
         invalid-name,
         relative-beyond-top-level,
+        too-many-branches,
         too-many-nested-blocks,
+        too-many-positional-arguments,
+        too-many-statements,
         broad-exception-caught,
         duplicate-code
 
