--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,5 +10,5 @@ lint:
   script:
     - python -m venv venv
     - source venv/bin/activate
-    - pip install --no-cache-dir --upgrade pip pylint boto3 pyvmomi pyyaml
+    - pip install --no-cache-dir --upgrade pip pylint boto3 pyvmomi pyyaml requests
     - pylint --rcfile=.pylintrc $(find . -type f -name "*.py" -not -path "./venv/*")
