--- a/inventory/config/config_vmware.json
+++ b/inventory/config/config_vmware.json
@@ -4,33 +4,16 @@
         "providers": {
             "vsphere" : {
                 "datacenter_credentials": {
-                    "nereide106": {
-                        "hostname": "ssm:nereide106.vsphere.hostname",
-                        "user": "ssm:nereide106.vsphere.user",
-                        "password": "ssm:nereide106.vsphere.password"
+                    "theplx50": {
+                        "hostname": "ssm:theplx50.vsphere.hostname",
+                        "user": "ssm:theplx50.vsphere.user",
+                        "password": "ssm:theplx50.vsphere.password"
                     }
                 },
                 "folders": {
                     "vm": {
                         "resource_types": [
                             "virtual_machine"
-                        ]
-                    },
-                    "host": {
-                        "resource_types": [
-                            "compute_resource",
-                            "cluster_compute_resource"
-                        ]
-                    },
-                    "datastore": {
-                        "resource_types": [
-                            "datastore",
-                            "datastore_cluster"
-                        ]
-                    },
-                    "network": {
-                        "resource_types": [
-                            "network"
                         ]
                     }
                 }
@@ -39,9 +22,10 @@
         "debug_mode": "DEBUG",
         "output": {
             "mode": "file",
-            "format": "csv",
-            "output_file": "s3:intradom-cartography-tools/vmware/nereide106/virtualmachines.csv",
-            "selected_fields": {
+            "format": "json",
+            "output_file": "./inventory_result.json",
+            "#output_file": "s3:intradom-cartography-tools/vmware/theplx50/virtualmachines.csv",
+            "#selected_fields": {
                 "Hypervisor": "VCenter",
                 "HostVersion": "VERSION vCENTER",
                 "Host": "Host",
