Evolution du fichier csv

--- a/inventory/config/config_inventaire_csv.json
+++ b/inventory/config/config_inventaire_csv.json
@@ -41,20 +41,18 @@
             "output_file": "s3:intradom-cartography-tools/aws/ec2/instances.csv",
             "selected_fields": {
                 "Hypervisor": "HYPERVISEUR",
-                "VERSION vCENTER": "VERSION vCENTER",
-                "Host": "Host",
                 "Name": "VM",
                 "State": "ETAT",
-                "LaunchTime": "DATE_DEMARRAGE_OS",
-                "CreationTime": "DATE_CREATION_VM",
-                "OsDetailed": "OS",
+                "LaunchTime": "DATE DEMARRAGE OS",
+                "CreationTime": "DATE CREATION VM",
+                "OsDetailed": "SYSTEME",
                 "PrivateDnsName": "DNS",
                 "PrivateIpAddress": "IP",
                 "Description": "ANNOTATION",
-                "BALISES_VEEAM": "BALISES_VEEAM", 
-                "BALISES_NETBACKUP": "BALISES_NETBACKUP",
-                "Profile": "BALISES_Environnement",
-                "OsName": "BALISES_GuestOS",
+                "Environment": "ENVIRONNEMENT",
+                "Profile": "COMPTE AWS",
+                "OsName": "TYPE OS",
+                "Subnets": "SOUS RESEAUX",
                 "SubnetName_1": "Network #1" ,
                 "SubnetName_2": "Network #2" ,
                 "SubnetName_3": "Network #3" ,
